--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -713,4 +713,48 @@
   <string name="subscriptions_per_month">%1$s%2$s/month</string>
   <string name="subscriptions_per_year">%1$s%2$s/year</string>
   
+
+<!--New Gamification-->
+  <string name="gamif_title">Up to %s%% Bonus!</string>
+  <string name="gamif_bonus_received">Bonus received</string>
+  <string name="gamif_spent">Amount spent to reach this level</string>
+  <string name="gamif_show_previous">Show previous achievements</string>
+  <string name="gamif_hide_previous">Hide previous achievements</string>
+  <string name="gamif_next_goals">Spend %s AppCoins to reach next level</string>
+  <string name="gamif_achievement_start">You started your journey</string>
+  <string name="gamif_achievement_start_sub">Just left Earth!</string>
+  <string name="gamif_achievement_reach">You reached %s</string>
+  <string name="gamif_achievement_distance">%s km from Earth</string>
+  <string name="gamif_achievement_distance_million">%s million km from Earth</string>
+  <string name="gamif_achievement_distance_billion">%s billion km from Earth</string>
+  <string name="gamif_achievement_unknown_location">You can\'t go further!</string>
+  <string name="gamif_card_start">You\'re still on Earth</string>
+  <string name="gamif_card_title">You\'re on %s</string>
+  <string name="gamif_card_body">Spend %s AppCoins more to reach the next level.</string>
+  <string name="gamif_bonus">%s%% Bonus</string>
+  <string name="gamif_placeholder_earth">Earth</string>
+  <string name="gamif_quote_earth">"The Earth is what we all have in common." – Wendell Berry</string>
+  <string name="gamif_placeholder_moon">the Moon</string>
+  <string name="gamif_quote_moon">"That\'s one small step for a man, one giant leap for mankind." – Neil Armstrong</string>
+  <string name="gamif_placeholder_mars">Mars</string>
+  <string name="gamif_quote_mars">"I would like to die on Mars. Just not on impact." – Elon Musk</string>
+  <string name="gamif_placeholder_phobos">the Phobos moon</string>
+  <string name="gamif_quote_phobos">"Everyone is a moon, and has a dark side which he never shows to anybody." – Mark Twain</string>
+  <string name="gamif_placeholder_jupiter">Jupiter</string>
+  <string name="gamif_quote_jupiter">"All truths are easy to understand once they are discovered; the point is to discover them..." – Galileo Galilei</string>
+  <string name="gamif_placeholder_europa">Europa moon</string>
+  <string name="gamif_quote_europa">"If you find life on Europa, what would you call it? Would it be, like, Europeans?" – Neil DeGrasse Tyson</string>
+  <string name="gamif_placeholder_saturn">Saturn</string>
+  <string name="gamif_quote_saturn">"The scientific theory I like best is that the rings of Saturn are composed entirely of lost airline luggage." – Mark Russell</string>
+  <string name="gamif_placeholder_titan">Titan moon</string>
+  <string name="gamif_quote_titan">"I\'m sure the universe is full of intelligent life. It\'s just been too intelligent to come here." – Arthur C.Clarke</string>
+  <string name="gamif_placeholder_uranus">Uranus</string>
+  <string name="gamif_quote_uranus">"The moons of Uranus seem to have got a twist." – Sir Robert Stawell Ball</string>
+  <string name="gamif_placeholder_neptune">Neptune</string>
+  <string name="gamif_quote_">"That star is not on the chart!" – Helnrich d\'Arrest upon discovering Neptune.</string>
+  <string name="gamif_placeholder_planetx">Planet X</string>
+  <string name="gamif_quote_planetx">"Somewhere, something incredible is waiting to be know." – Carl Sagan</string>
+
+
+
 </resources>
