--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -757,10 +757,11 @@
   <string name="gamif_placeholder_neptune">Neptune</string>
   <string name="gamif_quote_neptune">&quot;That star is not on the chart!&quot; – Helnrich d\'Arrest upon discovering Neptune.</string>
   <string name="gamif_distance_neptune">4.42 billion km from Earth</string>
-  <string name="gamif_placeholder_planetx">Planet X</string>
+  <string name="gamif_placeholder_planetx">Planet %s</string>
   <string name="gamif_quote_planetx">&quot;Somewhere, something incredible is waiting to be know.&quot; – Carl Sagan</string>
   <string name="gamif_placeholder_unknown">an unknown planet</string>
   <string name="gamif_distance_unkown">Unknown location</string>
   <string name="gamif_placeholder_new_planet">a new planet</string>
+  
 
 </resources>
