--- a/app/src/main/res/external_strings/values/perks.po
+++ b/app/src/main/res/external_strings/values/perks.po
@@ -1,6 +1,6 @@
 #. Card copy for the Purchase Promotion.
 #:
-msgid "Make a purchase in %1$s and receive %2$s AppCoins Credits"
+msgid "Make a purchase in %1$s and receive %2$s AppCoins Credits."
 msgstr ""
 
 #. Body for Purchase bonus receipt.
@@ -10,7 +10,7 @@ msgstr ""
 
 #. Card copy for the Expenditure Promotion.
 #:
-msgid "Spend %1$s %2$s in %3$s days and receive %4$s AppCoins Credits"
+msgid "Spend %1$s %2$s in %3$s days and receive %4$s AppCoins Credits."
 msgstr ""
 
 #. Body for Expenditure bonus receipt.
@@ -31,6 +31,11 @@ msgstr ""
 #. Body for Expenditure bonus receipt.
 #:
 msgid "Because you reached the next level."
+msgstr ""
+
+#. Card copy for Extra Gamification Bonus.
+#:
+msgid "Receive an extra %1$s%% Bonus in all your purchases in %2$s."
 msgstr ""
 
 #. Title for bonus receipt.
