--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -821,6 +821,6 @@
   <string name="perks_next_level_reward">Reach the next level to get %s AppCoins Credits!</string>
   <string name="perks_notification">You just received %s AppCoins Credits as a Bonus</string>
   <string name="perks_level_up_on_this_purchase">Level up with this purchase</string>
-  <string name="perks_level_up_amount_left">Spend %1$s %2$s to reach the next level.</string>
+  <string name="perks_level_up_amount_left">You\'re %1$s %2$s away from the next level!</string>
 
 </resources>
