--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -822,5 +822,7 @@
   <string name="perks_notification">You just received %s AppCoins Credits as a Bonus</string>
   <string name="perks_level_up_on_this_purchase">Level up with this purchase</string>
   <string name="perks_level_up_amount_left">You\'re %1$s %2$s away from the next level!</string>
+  <string name="perks_level_up_level_tag">Lv %s</string>
+  <string name="perks_bonus_purchase_flow">%1$s Bonus: %2$s in AppCoins Credits</string>
 
 </resources>
