--- a/app/src/main/res/external_strings/values-ar/perks.po
+++ b/app/src/main/res/external_strings/values-ar/perks.po
@@ -14,27 +14,27 @@ msgstr ""
 
 #. Card copy for the Purchase Promotion.
 #:
-msgid "Make a purchase in %1$s and receive %2$s AppCoins Credits."
+msgid "Make a purchase in {0} and receive {1} AppCoins Credits."
 msgstr "قم بعملية شراء في %1$s واحصل على رصيد %2$s Appcoins."
 
 #. Body for Purchase bonus receipt.
 #:
-msgid "Because you made a purchase in %1$s."
+msgid "Because you made a purchase in {0}."
 msgstr "لأنك قمت بالشراء في %1$s."
 
 #. Card copy for the Expenditure Promotion.
 #:
-msgid "Spend %1$s %2$s in %3$s days and receive %4$s AppCoins Credits."
+msgid "Spend {0} {1} in {2} days and receive {3} AppCoins Credits."
 msgstr "أنفق %1$s %2$s في %3$s أيام واحصل على رصيد %4$s AppCoins."
 
 #. Body for Expenditure bonus receipt.
 #:
-msgid "Because you spent more than %1$s %2$s in the last %3$s days."
+msgid "Because you spent more than {0} {1} in the last {2} days."
 msgstr "لأنك أنفقت أكثر من %1$s %2$s في أخر %3$s يوم."
 
 #. Card copy for the Next Level Promotion.
 #:
-msgid "Reach the next level and receive %1$s AppCoins Credits!"
+msgid "Reach the next level and receive {0} AppCoins Credits!"
 msgstr "انتقل إلى المستوى التالي واحصل على رصيد %1$s AppCoins!"
 
 #. Body for Purchase bonus receipt.
@@ -50,11 +50,11 @@ msgstr "لأنك وصلت إلى المستوى التالي."
 
 #. Card copy for Extra Gamification Bonus.
 #:
-msgid "Receive an extra %1$s%% Bonus in all your purchases in %2$s."
+msgid "Receive an extra {0}% Bonus in all your purchases in {1}."
 msgstr "احصل على مكافأة %1$s%% إضافية في كل عمليات الشراء في %2$s."
 
 #. Title for bonus receipt.
 #:
-msgid "+%1$s AppCoins Credits Bonus!"
+msgid "+{0} AppCoins Credits Bonus!"
 msgstr "+%1$s رصيد AppCoins مكافأة!"
 
