--- a/app/src/main/res/external_strings/values-nl/perks.po
+++ b/app/src/main/res/external_strings/values-nl/perks.po
@@ -14,27 +14,27 @@ msgstr ""
 
 #. Card copy for the Purchase Promotion.
 #:
-msgid "Make a purchase in %1$s and receive %2$s AppCoins Credits."
+msgid "Make a purchase in {0} and receive {1} AppCoins Credits."
 msgstr "Doe een aankoop in %1$s en ontvang %2$s AppCoins Credits."
 
 #. Body for Purchase bonus receipt.
 #:
-msgid "Because you made a purchase in %1$s."
+msgid "Because you made a purchase in {0}."
 msgstr "Omdat je een aankoop in %1$s hebt gedaan."
 
 #. Card copy for the Expenditure Promotion.
 #:
-msgid "Spend %1$s %2$s in %3$s days and receive %4$s AppCoins Credits."
+msgid "Spend {0} {1} in {2} days and receive {3} AppCoins Credits."
 msgstr "Besteed %1$s %2$s in %3$s dagen en ontvang %4$s AppCoins Credits."
 
 #. Body for Expenditure bonus receipt.
 #:
-msgid "Because you spent more than %1$s %2$s in the last %3$s days."
+msgid "Because you spent more than {0} {1} in the last {2} days."
 msgstr "Omdat je in de afgelopen %3$s dagen meer dan %1$s %2$s hebt besteed."
 
 #. Card copy for the Next Level Promotion.
 #:
-msgid "Reach the next level and receive %1$s AppCoins Credits!"
+msgid "Reach the next level and receive {0} AppCoins Credits!"
 msgstr "Bereik het volgende niveau en ontvang %1$s AppCoins Credits!"
 
 #. Body for Purchase bonus receipt.
@@ -50,11 +50,11 @@ msgstr "Omdat je het volgende niveau hebt bereikt."
 
 #. Card copy for Extra Gamification Bonus.
 #:
-msgid "Receive an extra %1$s%% Bonus in all your purchases in %2$s."
+msgid "Receive an extra {0}% Bonus in all your purchases in {1}."
 msgstr "Ontvang een extra bonus van %1$s%% bij al je aankopen in %2$s."
 
 #. Title for bonus receipt.
 #:
-msgid "+%1$s AppCoins Credits Bonus!"
+msgid "+{0} AppCoins Credits Bonus!"
 msgstr "+ bonus van %1$s AppCoins Credits!"
 
