--- a/app/src/main/res/external_strings/values-pt/perks.po
+++ b/app/src/main/res/external_strings/values-pt/perks.po
@@ -14,27 +14,27 @@ msgstr ""
 
 #. Card copy for the Purchase Promotion.
 #:
-msgid "Make a purchase in %1$s and receive %2$s AppCoins Credits."
+msgid "Make a purchase in {0} and receive {1} AppCoins Credits."
 msgstr "Faz uma compra em %1$s e recebe %2$s AppCoins Credits."
 
 #. Body for Purchase bonus receipt.
 #:
-msgid "Because you made a purchase in %1$s."
+msgid "Because you made a purchase in {0}."
 msgstr "Porque fizeste uma compra em %1$s."
 
 #. Card copy for the Expenditure Promotion.
 #:
-msgid "Spend %1$s %2$s in %3$s days and receive %4$s AppCoins Credits."
+msgid "Spend {0} {1} in {2} days and receive {3} AppCoins Credits."
 msgstr "Gasta %1$s %2$s em %3$s dias e recebe %4$s AppCoins Credits."
 
 #. Body for Expenditure bonus receipt.
 #:
-msgid "Because you spent more than %1$s %2$s in the last %3$s days."
+msgid "Because you spent more than {0} {1} in the last {2} days."
 msgstr "Porque gastaste mais de %1$s %2$s nos últimos %3$s dias."
 
 #. Card copy for the Next Level Promotion.
 #:
-msgid "Reach the next level and receive %1$s AppCoins Credits!"
+msgid "Reach the next level and receive {0} AppCoins Credits!"
 msgstr "Chega ao próximo nível e recebe %1$s AppCoins Credits!"
 
 #. Body for Purchase bonus receipt.
@@ -50,11 +50,11 @@ msgstr "Porque chegaste ao próximo nível."
 
 #. Card copy for Extra Gamification Bonus.
 #:
-msgid "Receive an extra %1$s%% Bonus in all your purchases in %2$s."
+msgid "Receive an extra {0}% Bonus in all your purchases in {1}."
 msgstr "Recebe um Bónus extra de %1$s%% em todas as tuas compras em %2$s."
 
 #. Title for bonus receipt.
 #:
-msgid "+%1$s AppCoins Credits Bonus!"
+msgid "+{0} AppCoins Credits Bonus!"
 msgstr "Bonus de +%1$s AppCoins Credits!"
 
