--- a/app/src/main/res/external_strings/values-tr/perks.po
+++ b/app/src/main/res/external_strings/values-tr/perks.po
@@ -14,27 +14,27 @@ msgstr ""
 
 #. Card copy for the Purchase Promotion.
 #:
-msgid "Make a purchase in %1$s and receive %2$s AppCoins Credits."
+msgid "Make a purchase in {0} and receive {1} AppCoins Credits."
 msgstr "%1$s oyununda bir satın alma işlemi gerçekleştirin ve %2$s AppCoins Credits kazanın."
 
 #. Body for Purchase bonus receipt.
 #:
-msgid "Because you made a purchase in %1$s."
+msgid "Because you made a purchase in {0}."
 msgstr "%1$s uygulamasında bir satın alma işlemi gerçekleştirdiğiniz için."
 
 #. Card copy for the Expenditure Promotion.
 #:
-msgid "Spend %1$s %2$s in %3$s days and receive %4$s AppCoins Credits."
+msgid "Spend {0} {1} in {2} days and receive {3} AppCoins Credits."
 msgstr "%3$s gün içinde %1$s %2$s harcayın ve %4$s AppCoins Credits kazanın."
 
 #. Body for Expenditure bonus receipt.
 #:
-msgid "Because you spent more than %1$s %2$s in the last %3$s days."
+msgid "Because you spent more than {0} {1} in the last {2} days."
 msgstr "Son %3$s günde %1$s %2$s üzerinde bir tutar harcadığınız için."
 
 #. Card copy for the Next Level Promotion.
 #:
-msgid "Reach the next level and receive %1$s AppCoins Credits!"
+msgid "Reach the next level and receive {0} AppCoins Credits!"
 msgstr "Bir sonraki seviyeye ulaşın ve %1$s AppCoins Credits kazanın!"
 
 #. Body for Purchase bonus receipt.
@@ -50,11 +50,11 @@ msgstr "Bir sonraki seviyeye ulaştığınız için."
 
 #. Card copy for Extra Gamification Bonus.
 #:
-msgid "Receive an extra %1$s%% Bonus in all your purchases in %2$s."
+msgid "Receive an extra {0}% Bonus in all your purchases in {1}."
 msgstr "%2$s uygulamasındaki tüm satın alma işlemlerinizde ekstra %%%1$s Bonus kazanın."
 
 #. Title for bonus receipt.
 #:
-msgid "+%1$s AppCoins Credits Bonus!"
+msgid "+{0} AppCoins Credits Bonus!"
 msgstr "+%1$s AppCoins Credits Bonusu!"
 
