--- a/app/src/main/res/external_strings/values-vi/perks.po
+++ b/app/src/main/res/external_strings/values-vi/perks.po
@@ -14,27 +14,27 @@ msgstr ""
 
 #. Card copy for the Purchase Promotion.
 #:
-msgid "Make a purchase in %1$s and receive %2$s AppCoins Credits."
+msgid "Make a purchase in {0} and receive {1} AppCoins Credits."
 msgstr "Mua hàng trong %1$s và nhận %2$s AppCoins Credits."
 
 #. Body for Purchase bonus receipt.
 #:
-msgid "Because you made a purchase in %1$s."
+msgid "Because you made a purchase in {0}."
 msgstr "Bởi vì bạn đã mua hàng trong%1$s."
 
 #. Card copy for the Expenditure Promotion.
 #:
-msgid "Spend %1$s %2$s in %3$s days and receive %4$s AppCoins Credits."
+msgid "Spend {0} {1} in {2} days and receive {3} AppCoins Credits."
 msgstr "Dùng %1$s %2$s trong %3$s ngày và nhận %4$s AppCoins Credits."
 
 #. Body for Expenditure bonus receipt.
 #:
-msgid "Because you spent more than %1$s %2$s in the last %3$s days."
+msgid "Because you spent more than {0} {1} in the last {2} days."
 msgstr "Bởi vì bạn đã dùng hơn %1$s %2$s trong %3$s ngày qua."
 
 #. Card copy for the Next Level Promotion.
 #:
-msgid "Reach the next level and receive %1$s AppCoins Credits!"
+msgid "Reach the next level and receive {0} AppCoins Credits!"
 msgstr "Đạt cấp kế tiếp và nhận %1$s AppCoins Credits!"
 
 #. Body for Purchase bonus receipt.
@@ -50,11 +50,11 @@ msgstr "Bởi vì bạn đã đạt đến cấp kế tiếp."
 
 #. Card copy for Extra Gamification Bonus.
 #:
-msgid "Receive an extra %1$s%% Bonus in all your purchases in %2$s."
+msgid "Receive an extra {0}% Bonus in all your purchases in {1}."
 msgstr "Nhận thêm %1$s%% tiền thưởng trên tất cả các giao dịch mua hàng trong %2$s."
 
 #. Title for bonus receipt.
 #:
-msgid "+%1$s AppCoins Credits Bonus!"
+msgid "+{0} AppCoins Credits Bonus!"
 msgstr "+%1$s AppCoins Credits tiền thưởng!"
 
