New String - Card title

--- a/app/src/main/res/external_strings/values/perks.po
+++ b/app/src/main/res/external_strings/values/perks.po
@@ -1,3 +1,8 @@
+#. Card Title
+#:
+msgid "Earn AppCoins Credits!"
+msgtr ""
+
 #. Card copy for the Purchase Promotion.
 #:
 msgid "Make a purchase in {0} and receive {1} AppCoins Credits."
