New Strings - New Perks

--- a/app/src/main/res/external_strings/values/perks.po
+++ b/app/src/main/res/external_strings/values/perks.po
@@ -38,6 +38,26 @@ msgstr ""
 msgid "Receive an extra {0}% Bonus in all your purchases, except AppCoins Credits, in {1}."
 msgstr ""
 
+#. Card - Firs purchase.
+#:
+msgid "Receive an extra {0}% Bonus in your first purchase, except AppCoins Credits, in {1}"
+msgstr ""
+
+#. Receipt - First Purchase.
+#:
+msgid "Because of your first purchase in {0}."
+msgstr ""
+
+#. Card - First purchase of the day.
+#:
+msgid "Receive an extra {0}% Bonus in your first purchase of the day, except AppCoins Credits, in {1}"
+msgstr ""
+
+#. Receipt - First Purchase of the day.
+#:
+msgid "Because of your first purchase of the day in {0}."
+msgstr ""
+
 #. Title for bonus receipts.
 #:
 msgid "+{0} AppCoins Credits Bonus!"
