--- a/app/src/main/res/external_strings/values/perks.po
+++ b/app/src/main/res/external_strings/values/perks.po
@@ -38,7 +38,7 @@ msgstr ""
 msgid "Receive an extra {0}% Bonus in all your purchases, except AppCoins Credits, in {1}."
 msgstr ""
 
-#. Card - Firs purchase.
+#. Card - First purchase.
 #:
 msgid "Receive an extra {0}% Bonus in your first purchase, except AppCoins Credits, in {1}"
 msgstr ""
@@ -68,9 +68,24 @@ msgstr ""
 msgid "Receive {0} AppCoins Credits extra for every {1} {2} you spend in {3}."
 msgstr ""
 
-
 #. Receipt - Expenditure per amount Promotion.
 #:
 msgid "Because you spent {0} {1} in {2}."
+msgstr 
+
+#. Card - Expendidute in any game.
+#:
+msgid "Receive {0} AppCoins Credits extra for every {1} {2} you spend in AppCoins apps."
+msgstr ""
+
+#. Receipt - Expenditure in any game.
+#:
+msgid "Because you spent {0} {1} in AppCoins apps."
+msgstr ""
+
+
+#. Card - Extra bonus in all games.
+#:
+msgid "Receive an extra {0}% in all your purchases, except AppCoins Credits."
 msgstr ""
 
