--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -813,7 +813,7 @@
   <string name="carrier_billing_code_field">Your code...</string>
   <string name="carrier_billing_code_resend_button">RESEND CODE</string>
   <string name="carrier_billing_submit_button">SUBMIT</string>
-  <string name="carrier_billing_number_not_supported">It seems your number isn\'t compatible with this payment method.</string
+  <string name="carrier_billing_number_not_supported">It seems your number isn\'t compatible with this payment method.</string>
   <string name="carrier_billing_terms_disclaimer">By tapping on Submit, you confirm you accept the Terms and Conditions and the Privacy Policy.</string>
   <string name="carrier_billing_help_1">Need help?</string>
   <string name="carrier_billing_help_2_button">Contact Support</string>
