--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -356,7 +356,7 @@
   <string name="gamification_how_max_level_body">You\'ve reached the highest level: %s Bonus on every purchase!</string>
   <string name="gamification_level_up_notification_title">Almost there!</string>
   <string name="gamification_level_up_notification_body">Spend %s AppCoins more to reach the next level.</string>
-  <string name="gamification_bonus_plus_perk_title">You've got extra bonus!</string>
+  <string name="gamification_bonus_plus_perk_title">You\'ve got extra bonus!</string>
   <string name="gamification_bonus_plus_perk_body">Enjoy a %1$s bonus and %2$s AppCoins Credits extra.</string>
 
   <!-- Provide wallet address -->
